_sass/_layout.scss
/**
 * _layout.scss   **********************************************************
 */

/**
 * Site header   **********************************************************
 */
.site-header {
padding: .5rem 0;
background-color: $theme-color;
opacity: .96;
position:fixed;
left:0px;
top:0px;
height: auto;
width: 100%;
z-index: 50;
}

.header-bar {
text-align: center;
}

.header-bar h1 {
color: $theme-color;
}

.site-header a {
color: $background-color;
}

.site-nav {
display: flex;
justify-content: space-between;
align-items: baseline;
.nav-link{
display: flex;
justify-content: space-between;
align-items: baseline;        
    }
.page-link{
line-height: $baseLineHeight;
margin-left: 1rem;
    }
}


@media screen and (max-width: 481px) {
.site-nav {
display: block;
float: left;
.page-link{
margin-left: 0;
margin-right: .5rem;
&:not(:last-child) {
margin-right: .5rem;
            }
        }
    }
}


/**
 * Site footer
**********************************************************
 */

.site-footer {
flex: 3;
background-color: $grey-color-dark;
padding: .5rem;
color: #aaa;
width:100%;
max-height: 1.5rem;
}

.footer a{
    color: #aaa;
    text-decoration: none;
}
/**
 * Pagination   **********************************************************
 */

.pagination{
text-align: center;
width: 100%;
position: inherit;
border-top: $leading;
}

/**
 * Page content   **********************************************************
 */

.page-content {
display: flex;
flex-direction: column;
justify-content: space-between;
padding: 2rem 0 0 0; /* VERTICAL PADDING FOR TITLE ON EVERY PAGE */
min-height: 100%;
}

/* for header size */
@media screen and (max-width: 481px) {
.page-content {  
padding: 3.5rem 0 0 0;
    }
}

.post-list {
padding: 0;
margin: 0;
list-style: none;
    > li {
margin-bottom: $leading;
    }
}
.contacticon {
font-size: 3.75rem;
display:block;
}
.contacticon2 {
font-size: 1.25rem;
display:block;
}
.center{
text-align: center;
}
/**
 * Posts  **********************************************************
 */
.post-header {
    margin-bottom: 1rem;
}

.post-header h2 {
    margin: 1.45rem 0;
}
.post-title {
font-size: 42px;
letter-spacing: -1px;
line-height: 1;
}

.post-meta {
font-size: $small-font-size;
color: $grey-color;
margin-bottom: 0; 
}
.post-link {
display: block;
/* font-size: 42px; */
}



/** 
 * Portfolio grid **********************************************************

/* Three Column */


.portfolio {
display: flex;
flex-wrap: wrap;
justify-content: space-between;  
}
.project {
display: inline-block;
margin-bottom: .5rem;
width: calc(33.3% - .5rem);
}
.thumbnail{
overflow: hidden;
height: calc(100% - .5rem);
}
.thumbnail img{
width: 100%;
height: 100%;
}
.thumbnail a{
float: left;
position: relative;
width: 100%;
}
.thumbnail a span {
display: none;
position: absolute;
top: 0;
left: 0;
bottom: 0;
right: 0;
background: rgba(0,0,0,0.4);
color: $grey-color-light;
padding: 1rem;
text-align: center;
}
.thumbnail a:hover span {
display: block;
}


/* Two Column */
@media screen and (max-width: 37.5rem) {

    .project {
        width: calc(50% - .5rem);
    }
    .thumbnail img{
    }
}
/* One Column */
@media screen and (max-width: 25rem) {

    .project {
        width: 100%;
    }
    .thumbnail img{
    }
}

/** 
 * Portfolio pages **********************************************************
*/
.blankbox{
background: $theme-color;
}
.img_row{
height: $img_height;
width: 100%;
overflow: hidden;
box-sizing:border-box;
padding: $img_spacing;
}
.col{ 
width: 100%;
height: 100%;
float: left;
object-fit: cover;
box-sizing:border-box;
padding: 0;
margin-bottom: 1.45rem;
margin-top: 1.45rem;

    .colhug{
        margin-top: 0;
    }
    .colall{
        margin: 0;
    }
}
.right{
float: right;
}
.left{
padding: 0 $img_spacing;
}
.one {
width:33.33%;
padding: 0;
}
.two {
width: 66.66%;
}
.three{
width: 100%;
}
.caption{
height: 100%;
color: $caption_color;
text-align: center;
vertical-align: middle;
font-size: $caption_font_size;
}

/** 
 * Video
**********************************************************
*/


.videoWrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 25px;
    height: 0;
}
.videoWrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

